Changelog
=========

4.2-dev - (unreleased)
----------------------

4.1 - (2011-11-18)
------------------
* Rerelease broken egg  

4.0 - (2011-11-18)
------------------
* Plone 4+ compatible version
  [avoinea]

1.0 - (2011-10-04)
------------------
* Initial release
